--- a/css/home.css
+++ b/css/home.css
@@ -3,22 +3,60 @@ body{
 }
 
 nav{
-	margin-top: 2.5%;
-	text-align: right;
+	height: 3em;
+	background-color: #2196d1;
+	padding-top: 2.5%;
+	display: flex;
+	justify-content: end;
+	
+}
+
+nav a:last-of-type{
 	margin-right: 10%;
 }
 
 nav a{
 	text-decoration: none;
-	color: #E16A3D;
+	color: #263238;
 	margin-right: 3%;
 	font-size: 20px;
 }
 
-p, img{
+.firstview{
+	display: flex;
+	margin: 4% auto;
+	justify-content: center;
+	align-items: center;
+}
+
+.textaside{
+	width: 45%;
 	display: inline-block;
+	text-align: center;
+	margin-right: 5%;
+}
+
+h1{
+	font-size: 4em;
+	font-weight: bold;
+	margin-bottom: 4%;
+	color: #263238;
+}
+
+p{
+	font-size: 1.2em;
+	width: 70%;
+	margin: 0 auto;
 }
 
 img{
-	width: 400px;
+	width: 40%;
+}
+
+nav a:hover{
+	background-color: #E16A3D;
+	border-radius: 10px;
+	color: white;
+	transform: scale(1.2);
+	transition: 0.7s;
 }
