--- a/css/home.css
+++ b/css/home.css
@@ -3,27 +3,36 @@ body{
 	
 }
 
-nav{
-	height: 3em;
+header{
+	width: 100%;
 	background-color: #E16A3D;
-	padding-top: 2%;
 	display: flex;
-	justify-content: end;
-	
+	align-items: center;
 }
 
-nav a:last-of-type{
-	margin-right: 10%;
+header p{
+	width: 4%;
+	padding-left: 2%;
+}
+
+header h1{
+	font-size: 5em;
+	padding: 1% 0;
+	color: #263238;
+	text-transform: uppercase;
+}
+
+header nav{
+	width: 60%;
+	text-align: right;
+	padding-left: 16%;
 }
 
 nav a{
-	height: 50%;
-	text-align: center;
 	text-decoration: none;
 	color: #263238;
 	margin-right: 3%;
 	font-size: 20px;
-	padding: 0.2%;
 }
 
 .firstview{
@@ -39,10 +48,10 @@ nav a{
 	text-align: center;
 	margin-right: 5%;
 	background-color: rgba(225, 106, 61, 0.28);
-	border-radius: 70% 40% 60% 53%;
+	border-radius: 57% 40% 50% 40%;
 }
 
-h1{
+.firstview .textaside h1{
 	font-size: 4em;
 	font-weight: bold;
 	margin-bottom: 4%;
@@ -60,8 +69,30 @@ img{
 }
 
 nav a:hover{
-	border-radius: 10px;
 	color: white;
-	transform: scale(1.2);
 	transition: 0.7s;
+	font-size: 1.5em;
+}
+
+nav a:not(:hover){
+	color: #263238;
+	transition: 0.7s;
+}
+
+@media screen and (max-width: 1140px){
+	.firstview{
+		display: flex;
+		flex-direction: column;
+	}
+
+	img{
+		min-width: 420px;
+		margin-top: 5%;
+	}
+}
+
+@media screen and (max-width: 780px){
+	nav{
+		opacity: 0;
+	}
 }
