--- a/css/login.css
+++ b/css/login.css
@@ -138,3 +138,34 @@ main{
 #rightSide .form button:hover{
 	cursor: pointer;
 }
+
+/* POPUP Criar Conta */
+.popup-wrapper{
+	display: none;
+	background: rgba(0,0,0, 0.5);
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
+
+.contas, .cliente, .catador{
+	display: none;
+	text-align: center;
+	width: 100%;
+	max-width: 300px;
+	margin: 22.5% auto;
+	padding: 20px;
+	background-color: white;
+	position: relative;
+	border-radius: 5%;
+	box-shadow: 0px 0px 40px 10px black;
+}
+
+.popup-close{
+	position: absolute;
+	top: 5px;
+	right: 15px;
+	cursor: pointer;
+}
