--- a/views/login.ejs
+++ b/views/login.ejs
@@ -243,7 +243,7 @@
 		</div>
 	</main>
 
-	<script type="text/javascript" src="js/index.js"></script>
+	<script type="text/javascript" src="app.js"></script>
 
 </body>
 
