--- a/css/costumer.css
+++ b/css/costumer.css
@@ -42,6 +42,20 @@ body{
     font-size: 1.2em;
 }
 
+.sideBar > a{
+    border-radius: 10px;
+    border: 0;
+    width: 60%;
+
+    margin: 50% 0 -30% 0;
+
+    color: white;
+    background-color: #90C320;
+    font-family: 'Poppins';
+    font-size: 1.1em;
+    border: 0;
+}
+
 /* Parte Principal (Nova Coleta) */
 main{
     display: flex;
