--- a/css/customer/address.css
+++ b/css/customer/address.css
@@ -1,25 +1,85 @@
 body{
 	font-family: 'Poppins';
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: 0.5fr 2fr;
+    grid-template-rows: 1;
+    grid-template-areas: "side main";
     height: 100vh;
-    overflow: hidden;
+    
+    overflow-x: hidden;
 }
 
-main{
-    width: 60vw;
+/* Barra Lateral */
+.sideBar{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    border: 3px solid #136A5A;
-    border-radius: 5%;
-    box-shadow: 0px 0px 20px 10px #90C320;
-    padding: 1%;
+
+    background-color: #136A5A;
+    text-align: center;
+    color: white;
+    line-height: 2em;
+
+    position: fixed;
+    top: 0;
+    left: 0;
+
+    width: 20vw;
+    height: 100vh;
 }
 
-main h2{
+.sideBar img{
+    margin: 10% 0;
+    width: 80px;
+}
+
+.sideBar h2{
+    font-size: 1.7em;
+}
+
+.sideBar nav ul li p{
+    color: #90C320;
+    margin-top: 50%;
+    font-size: 1em;
+}
+
+.sideBar nav ul li a{
+    text-decoration: none;
+    color: white;
+    font-size: 1.2em;
+}
+
+#address{
+    border-bottom: 1px solid #90C320;
+}
+
+/* Parte Principal (Nova Coleta) */
+main{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    position: absolute;
+    top: 0;
+    left: 20vw;
+    width: 80vw;
+    height: 100vh;
+}
+
+main .box{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    width: 80%;
+    box-shadow: 0 0 33px 10px #90C320;
+    border-radius: 20px;
+}
+
+main .box h2{
     color: #90C320;
     font-size: 1.5em;
     padding-top: 5%;
@@ -69,7 +129,7 @@ input[type="checkbox"]{
     border-radius: 60%;
 }
 
-main > button{
+.box > button{
     width: 200px;
     padding: 1%;
     color: white;
