--- a/css/newCollect.css
+++ b/css/newCollect.css
@@ -7,18 +7,74 @@ body{
     overflow: hidden;
 }
 
-main{
+/* Barra Lateral */
+.sideBar{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    border: 3px solid #136A5A;
-    border-radius: 10%;
-    box-shadow: 0px 0px 20px 10px #90C320;
-    padding: 3%;
+
+    background-color: #136A5A;
+    text-align: center;
+    color: white;
+    line-height: 2em;
+
+    position: fixed;
+    top: 0;
+    left: 0;
+
+    width: 20vw;
+    height: 100vh;
 }
 
-main h2{
+.sideBar img{
+    margin: 10% 0;
+    width: 80px;
+}
+
+.sideBar h2{
+    font-size: 1.7em;
+}
+
+.sideBar nav ul li p{
+    color: #90C320;
+    margin-top: 50%;
+    font-size: 1em;
+}
+
+.sideBar nav ul li a{
+    text-decoration: none;
+    color: white;
+    font-size: 1.2em;
+}
+
+/* Pa{rte Principal (Nova Coleta) */
+main{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    position: absolute;
+    top: 0;
+    left: 20vw;
+    width: 80vw;
+    height: 100vh;
+    
+}
+
+main .box{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    width: 80%;
+    box-shadow: 0 0 33px 10px #90C320;
+    border-radius: 20px;
+}
+
+main .box h2{
     color: #90C320;
     font-size: 1.5em;
     padding-top: 5%;
@@ -26,31 +82,30 @@ main h2{
     text-align: center;
 }
 
-main h2:first-of-type{
-    padding-top: 0;
-}
-
-main ul.materiais, main ul.dias{
-    width: 70%;
+.box ul.materiais, .box ul.dias{
+    width: 62%;
     display: grid;
     grid-template-columns: 0.5fr 0.5fr;
+	text-align: left;
+	margin-left: 15%;
 }
 
-main ul.periodo{
-    width: 40%;
+.box ul.periodo{
+    width: 100%;
     display: flex;
+    justify-content: center;
     align-items: center;
     flex-direction: row;
 }
 
-main ul.periodo li{
+.box ul.periodo li{
     padding-right:2%;
 }
 
-button{
+.box button{
     width: 200px;
     padding: 1%;
-    margin-top: 5%;
+    margin: 2%;
     color: white;
     background-color: #90C320;
     border: 0;
@@ -61,7 +116,7 @@ button{
 
 /**/
 .single-input{
-    width: 100%;
+    width: 90%;
 	position: relative;
 	margin-top: 8%;
 }
