sidebar cliente concluida

--- a/css/costumer.css
+++ b/css/costumer.css
@@ -30,6 +30,11 @@ body{
     font-size: 1.7em;
 }
 
+.sideBar a{
+    text-decoration: none;
+    color: white;
+}
+
 .sideBar nav ul li p{
     color: #90C320;
     margin-top: 50%;
@@ -42,12 +47,13 @@ body{
     font-size: 1.2em;
 }
 
-.sideBar > a{
+.sideBar > a:last-of-type{
+    text-decoration: none;
     border-radius: 10px;
     border: 0;
     width: 60%;
 
-    margin: 50% 0 -30% 0;
+    margin-top: 20%;
 
     color: white;
     background-color: #90C320;
