--- a/css/customer/data.css
+++ b/css/customer/data.css
@@ -38,6 +38,11 @@ body{
     font-size: 1.7em;
 }
 
+.sideBar a{
+    text-decoration: none;
+    color: white;
+}
+
 .sideBar nav ul li p{
     color: #90C320;
     margin-top: 50%;
@@ -50,7 +55,22 @@ body{
     font-size: 1.2em;
 }
 
-#data{
+.sideBar > a:last-of-type{
+    text-decoration: none;
+    border-radius: 10px;
+    border: 0;
+    width: 60%;
+
+    margin-top: 20%;
+
+    color: white;
+    background-color: #90C320;
+    font-family: 'Poppins';
+    font-size: 1.1em;
+    border: 0;
+}
+
+#historic{
     border-bottom: 1px solid #90C320;
 }
 
@@ -59,11 +79,13 @@ main{
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 
     position: absolute;
     top: 0;
     left: 20vw;
-    width: 80vw;    
+    width: 80vw;
+    height: 100vh;
 }
 
 main .box{
